--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
                         <configuration>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>org.lappsgrid.eager.askme.web.Main</mainClass>
+                                    <mainClass>Main</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
@@ -56,7 +56,7 @@
                             </descriptorRefs>
                             <archive>
                                 <manifest>
-                                    <mainClass>org.lappsgrid.eager.askme.web.Main</mainClass>
+                                    <mainClass>org.lappsgrid.askme.web.Main</mainClass>
                                 </manifest>
                             </archive>
                         </configuration>
