--- a/pom.xml
+++ b/pom.xml
@@ -78,9 +78,9 @@
             <version>2.7.0</version>
         </dependency>
         <dependency>
-            <groupId>org.lappsgrid.eager.mining</groupId>
+            <groupId>org.lappsgrid.askme</groupId>
             <artifactId>query</artifactId>
-            <version>1.0.0</version>
+            <version>1.0.0-SNAPSHOT</version>
         </dependency>
 
         <dependency>
