--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,11 @@
             <version>1.0.0</version>
         </dependency>
         <dependency>
+            <groupId>org.lappsgrid.askme</groupId>
+            <artifactId>core</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.lappsgrid</groupId>
             <artifactId>serialization</artifactId>
             <version>2.7.0</version>
