--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -35,7 +35,7 @@ appender.rolling.strategy.max = 20
 
 #Make sure to change the package structure as per your application
 
-logger.rolling.name = org.lappsgrid.eager.askme.query
+logger.rolling.name = org.lappsgrid.askme.web
 logger.rolling.level = trace
 logger.rolling.additivity = false
 logger.rolling.appenderRef.rolling.ref = RollingFile
