--- a/pom.xml
+++ b/pom.xml
@@ -177,7 +177,7 @@
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-all</artifactId>
-            <!-- <version>2.5.5</version> -->
+            <version>2.5.5</version>
             <type>pom</type>
         </dependency>
         <dependency>
