Fixes for Docker containers

--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -1,5 +1,7 @@
 FROM openjdk:9-jdk
 RUN useradd -ms /bin/bash askme
+RUN mkdir /usr/local/eager && chown askme /usr/local/eager
+RUN mkdir /var/log/eager && chown askme /var/log/eager
 COPY start.sh /home/askme/start.sh
 RUN chmod +x /home/askme/start.sh
 COPY *.jar /home/askme
