--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.2.RELEASE</version>
+        <version>2.1.0.RELEASE</version>
     </parent>
     <groupId>org.lappsgrid.askme</groupId>
     <artifactId>web</artifactId>
@@ -130,11 +130,13 @@
             <artifactId>serialization</artifactId>
             <version>2.7.0</version>
         </dependency>
+        <!--
         <dependency>
             <groupId>org.lappsgrid.askme</groupId>
             <artifactId>query</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
+        -->
 
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -144,6 +146,13 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-logging</artifactId>
+                </exclusion>
+            </exclusions>
+
         </dependency>
         <!--
         <dependency>
