--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -41,4 +41,9 @@ cache.ttl=30
 upload.postoffice=galaxy.upload.service
 upload.address=zip
 
+query.mailbox=query
+nlp.mailbox=nlp
+ranking.mailbox=ranking
+web.mailbox=web
+solr.mailbox=solr
 
