--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.0.RELEASE</version>
+        <version>2.1.2.RELEASE</version>
     </parent>
     <groupId>org.lappsgrid.askme</groupId>
     <artifactId>web</artifactId>
@@ -14,6 +14,9 @@
 
     <name>AskMe Web</name>
     <description>AskMe Web service.</description>
+    <properties>
+        <groovy.version>2.5.3</groovy.version>
+    </properties>
     <build>
         <finalName>service</finalName>
         <plugins>
@@ -167,6 +170,11 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>com.h2database</groupId>
