--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,8 @@
-logging.file=/var/log/eager/askme.log
+logging.file=/var/log/askme/web.log
 logging.level.org.lappsgrid=WARN
-logging.level.org.lappsgrid.eager=INFO
-logging.level.org.lappsgrid.eager.rank=INFO
-logging.level.org.lappsgrid.eager.rank.RankingEngine=WARN
-logging.level.org.lappsgrid.eager.rank.CompositeRankingEngine=WARN
-logging.level.org.lappsgrid.eager.mining.web=WARN
-logging.level.org.lappsgrid.eager.mining.web.utils=INFO
-logging.level.org.lappsgrid.eager.mining.web.controllers=INFO
+logging.level.org.lappsgrid.askme=TRACE
 logging.level.org.springframework=WARN
 logging.level.org.apache=WARN
-logging.level.edu.stanford.nlp=ERROR
 
 spring.jpa.open-in-view=false
 spring.datasource.url=jdbc:h2:file:/usr/local/eager/db/ratings;DB_CLOSE_ON_EXIT=FALSE
@@ -41,9 +34,4 @@ cache.ttl=30
 upload.postoffice=galaxy.upload.service
 upload.address=zip
 
-query.mailbox=query
-nlp.mailbox=nlp
-ranking.mailbox=ranking
-web.mailbox=web
-solr.mailbox=solr
 
