Can show/hide scoring parameters

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.jpa.hibernate.ddl-auto=update
 # Values migrated from the eager-web.conf file.
 #
 solr.host=http://129.114.16.34:8983/solr
-solr.collection=bioqa
+solr.collection=cord19
 solr.rows=5000
 
 galaxy.host=https://galaxy.lappsgrid.org
