--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>org.lappsgrid.askme</groupId>
     <artifactId>web</artifactId>
-    <version>1.5.2-SNAPSHOT</version>
+    <version>1.5.2</version>
 
     <name>AskMe Web</name>
     <description>AskMe Web service.</description>
