--- a/pom.xml
+++ b/pom.xml
@@ -163,11 +163,15 @@
             </exclusions>
             -->
         </dependency>
-        <!--
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-security</artifactId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-registry-prometheus</artifactId>
+        </dependency>
+        <!--
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
@@ -193,6 +197,7 @@
             <artifactId>h2</artifactId>
             <version>1.4.196</version>
         </dependency>
+        <!--
         <dependency>
             <groupId>org.apache.solr</groupId>
             <artifactId>solr-core</artifactId>
@@ -203,6 +208,7 @@
             <artifactId>solr-solrj</artifactId>
             <version>7.4.0</version>
         </dependency>
+        -->
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-all</artifactId>
