--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+spring.application.name=askme
+
 ##logging.file=/var/log/askme/web.log
 #logging.level.org.lappsgrid=WARN
 #logging.level.org.lappsgrid.askme=TRACE
@@ -9,6 +11,7 @@ management.endpoints.web.exposure.include=*
 management.endpoint.prometheus.enabled=true
 management.metrics.export.prometheus.enabled=true
 management.metrics.export.prometheus.step=1m
+management.metrics.tags.application=askme
 
 spring.jpa.open-in-view=false
 spring.datasource.url=jdbc:h2:file:/usr/local/eager/db/ratings;DB_CLOSE_ON_EXIT=FALSE
