Disable the error controller for now.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.application.name=askme
+server.error.whitelabel.enabled=true
+#server.error.path=/error
 
 ##logging.file=/var/log/askme/web.log
 #logging.level.org.lappsgrid=WARN
