--- a/pom.xml
+++ b/pom.xml
@@ -223,6 +223,12 @@
             <version>4.13.1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.lappsgrid.askme</groupId>
+            <artifactId>query</artifactId>
+            <version>1.0.1-SNAPSHOT</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     <repositories>
         <repository>
