--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
     <build>
         <finalName>service</finalName>
         <plugins>
-            <plugin>
+	  <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.7.0</version>
                 <configuration>
@@ -31,12 +31,12 @@
                     <dependency>
                         <groupId>org.codehaus.groovy</groupId>
                         <artifactId>groovy-eclipse-compiler</artifactId>
-                        <version>2.9.2-01</version>
+                        <version>3.7.0</version>
                     </dependency>
                     <dependency>
                         <groupId>org.codehaus.groovy</groupId>
                         <artifactId>groovy-eclipse-batch</artifactId>
-                        <version>2.5.0-01</version>
+                        <version>2.5.10-01</version>
                     </dependency>
                 </dependencies>
             </plugin>
