--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,6 +21,7 @@ spring.datasource.username=test
 spring.datasource.password=test
 spring.datasource.driverClassName=org.h2.Driver
 spring.jpa.hibernate.ddl-auto=update
+spring.groovy.template.check-template-location=false
 
 #
 # Values migrated from the eager-web.conf file.
@@ -44,5 +45,6 @@ cache.ttl=30
 # RabbitMQ information to send json to Galaxy
 upload.postoffice=galaxy.upload.service
 upload.address=zip
+
 
 
