--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>org.lappsgrid.askme</groupId>
     <artifactId>web</artifactId>
-    <version>1.7.0-SNAPSHOT</version>
+    <version>1.0.0-SNAPSHOT</version>
 
     <name>AskMe Web</name>
     <description>AskMe Web service.</description>
@@ -18,7 +18,7 @@
         <groovy.version>2.5.3</groovy.version>
     </properties>
     <build>
-        <finalName>service</finalName>
+        <finalName>${project.artifactId}-${project.version}-${git.commit.id.describe-short}</finalName>
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -67,6 +67,24 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>pl.project13.maven</groupId>
+                <artifactId>git-commit-id-plugin</artifactId>
+                <!--<version>${git-commit-id-plugin.version}</version>-->
+                <version>4.9.9</version>
+                <executions>
+                    <execution>
+                        <id>get-the-git-infos</id>
+                        <goals>
+                            <goal>revision</goal>
+                        </goals>
+                        <phase>validate</phase>
+                    </execution>
+                </executions>
+                <configuration>
+                    <dotGitDirectory>${project.basedir}/.git</dotGitDirectory>
+                </configuration>
             </plugin>
             <!--
             <plugin>
@@ -131,7 +149,7 @@
         <dependency>
             <groupId>org.lappsgrid.askme</groupId>
             <artifactId>core</artifactId>
-            <version>2.0.0-SNAPSHOT</version>
+            <version>2.1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.lappsgrid</groupId>
