--- a/pom.xml
+++ b/pom.xml
@@ -13,13 +13,13 @@
 
     <groupId>org.lappsgrid.askme</groupId>
     <artifactId>web</artifactId>
-    <version>2.0.0</version>
+    <version>2.1.0-SNAPSHOT</version>
 
     <name>AskMe Web</name>
     <description>AskMe Web service.</description>
 
     <properties>
-        <lappsgrid.askme.core.version>2.2.0</lappsgrid.askme.core.version>
+        <lappsgrid.askme.core.version>2.3.0-SNAPSHOT</lappsgrid.askme.core.version>
         <lappsgrid.rabbitmq.version>1.2.0</lappsgrid.rabbitmq.version>
         <lapps.serialization.version>2.7.0</lapps.serialization.version>
         <!-- The parent POM has a different Groovy version than the parent POM of  -->
@@ -213,16 +213,6 @@
             <version>2.1.214</version>
         </dependency>
         <!--
-        <dependency>
-            <groupId>org.apache.solr</groupId>
-            <artifactId>solr-core</artifactId>
-            <version>7.4.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.solr</groupId>
-            <artifactId>solr-solrj</artifactId>
-            <version>7.4.0</version>
-        </dependency>
         <dependency>
             <groupId>io.rest-assured</groupId>
             <artifactId>rest-assured</artifactId>
