--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 
     <groupId>org.lappsgrid.askme</groupId>
     <artifactId>web</artifactId>
-    <version>2.1.0-SNAPSHOT</version>
+    <version>2.1.0</version>
 
     <name>AskMe Web</name>
     <description>AskMe Web service.</description>
